<resources>
    <string name="app_name">MGT Downloader</string>

    <string name="label_download">Download</string>
    <string name="label_multi_thread_download">Multi-thread Download</string>
    <string name="label_in_progress">Downloading</string>
    <string name="label_done">Downloaded</string>
    <string name="label_canceled_or_fail">Canceled/Failed</string>
    <string name="label_cancel_task">Cancel</string>
    <string name="label_delete_from_list">Delete from list</string>
    <string name="label_delete_from_storage">Delete from storage</string>
    <string name="label_delete_from_both">Delete from both</string>
    <string name="label_apply">Apply</string>

    <string name="desc_app">Download video from Facebook, TikTok and more</string>
    <string name="desc_paste_url">Copy and paste url here</string>
    <string name="desc_download_list">Download list</string>
    <string name="desc_change_file_name">Change file name</string>
    <string name="desc_url">Url:</string>
    <string name="desc_downloaded_size">Now:</string>
    <string name="desc_invalid_url">Invalid url</string>
    <string name="desc_file_name_exists">File name existed</string>
    <string name="desc_zero_percent">0%</string>
    <string name="desc_pause">Paused</string>
    <string name="desc_resume">Resume</string>
    <string name="desc_delete">Delete</string>
    <string name="desc_open_file">Open</string>
    <string name="desc_cancel">Cancel</string>
    <string name="desc_retry">Retry</string>
    <string name="desc_foreground_title">Download service is running</string>
    <string name="desc_foreground_content">Touch to view download list</string>
    <string name="desc_begin_at">Begin:</string>
    <string name="desc_unknown_size">unknown</string>
    <string name="desc_remaining_time">End in</string>
    <string name="desc_ago">ago</string>
    <string name="desc_can_not_delete_file">Error: cannot delete file</string>
    <string name="desc_can_not_delete_item">Error: cannot delete item</string>
    <string name="desc_deleted">Deleted</string>
    <string name="desc_expand">Expand</string>
    <string name="desc_collapse">Collapse</string>
    <string name="desc_deleted_from_storage">Deleted from storage</string>
    <string name="desc_now">Just now</string>
    <string name="desc_minute">min(s)</string>
    <string name="desc_hour">hour(s)</string>
    <string name="desc_day">day(s)</string>
    <string name="desc_second">sec(s)</string>
    <string name="desc_file">File</string>
    <string name="desc_size">Size:</string>
    <string name="desc_settings">Settings</string>
    <string name="desc_statistics">Statistics</string>
    <string name="desc_details">Details</string>
    <string name="desc_about">About</string>
    <string name="desc_about_info"><b>Version:</b> %s\n<b>Developer:</b> Tai Than\n<b>Email:</b> thanductaimgt@gmail.com</string>
    <string name="desc_rate_app"><u>Rate this app on CH Play</u></string>
    <string name="desc_max_concurrent_download_num">Max parallel download:</string>
    <string name="desc_thread_num_multi_thread_download">Threads per multi-thread download:</string>
    <string name="desc_total_download_num">Total download:</string>
    <string name="desc_success_download_num">Successful download:</string>
    <string name="desc_cancel_or_fail_download_num">Canceled/Failed download:</string>
    <string name="desc_total_download_size">Total download size:</string>
    <string name="desc_download_dir_path">Download folder path</string>
    <string name="desc_note_delete_app">Important note: if you intend to remove this app, consider to backup or move all downloaded files to other location outside \"com.mgt.downloader/\" to prevent data loss as this folder will be deleted together with the application</string>
    <string name="desc_default">default</string>
    <string name="desc_not_available_for_file">Not available for this file</string>
    <string name="desc_swap">Swap</string>
    <string name="desc_view_info">View details</string>
    <string name="desc_edit_name">Change file name</string>
    <string name="desc_invalid_file_name">File name cannot contain \'/\' character</string>
    <string name="desc_multi_thread_download">Downloading multiple parts concurrently</string>
    <string name="desc_permission_denied">Cannot perform action without permission</string>

    <string name="cannot_resolve_host">Cannot connect to this url</string>
    <string name="desc_can_not_open_file">No application can open this file</string>

    <string name="hint_paste_url">Paste your URL here</string>
    <string name="hint_file_name">File name &#8230;</string>

    <string name="time_format">%s\n%s</string>
    <string name="download">Download</string>
    <string name="file">file</string>
    <string name="root">root</string>
    <string name="error_occurred">Some errors occurred</string>
    <string name="press_again_to_exit">Press back again to exit</string>
    <string name="item_count">%d item</string>
    <string name="no_connection">No Internet connection</string>
    <string name="thanks_for_rating">Thank you for spending time to rate this app</string>
    <string name="path_not_available">Not available, try again later</string>

    <string name="update_app_title">New version %s available</string>
    <string name="update_app_description">To benefit from newest features and bugs fix, please update app</string>
    <string name="update">Update</string>
    <string name="later">Later</string>
    <string name="share_message">Share downloaded files</string>
    <string name="share_fail">Share fail</string>
    <string name="share_success">Share successful</string>
</resources>
