<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/rootLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ui.download_list.DownloadListFragment">

    <TextView
            android:id="@+id/networkStateTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightCancelButtonBackground"
            android:padding="4dp"
            android:text="@string/no_connection"
            android:textAlignment="center"
            android:textColor="@color/lightBackground"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/titleTextViewBottomSheetLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_round_top_corners">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/selectable_bg"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:text="@string/desc_download_list"
                android:textAlignment="center"
                android:textSize="@dimen/sizeTextTitle"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:layout_width="15dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/desc_collapse"
                android:src="@drawable/down"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <ImageView
                android:id="@+id/settingsImgView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/desc_settings"
                android:padding="12dp"
                android:src="@drawable/settings"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/lightMediumGray" />

    <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/lightWeakGray"
            android:paddingBottom="1dp" />

    <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayout"
            style="@style/TabLayoutTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:itemIconTint="@color/lightPrimary"
            app:itemTextColor="@color/lightPrimary"
            app:menu="@menu/menu_tab_layout_bottom_sheet"
            app:tabIndicatorGravity="top">

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_in_progress"

                />

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_done"

                />

        <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_canceled_or_fail"

                />
    </com.google.android.material.tabs.TabLayout>

    <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:adSize="BANNER"
            app:adUnitId="@string/banner2_ad_id" />
</LinearLayout>